data/derived/comb/progs/unify/prog3310.ml.out
Characters 20-22:
  let n = 30 in n mod 10
                      ^^
Error: This expression has type int
       This is not a function; it cannot be applied.
